--- a/WebApplication2/wwwroot/css/site.css
+++ b/WebApplication2/wwwroot/css/site.css
@@ -29,7 +29,7 @@ body {
   margin:0;
 }
 
-.bg,.nav{
+.bg{
   animation:slide 3s ease-in-out infinite alternate;
   background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
   bottom:0;
