--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">О нас</a>
                     </li>
+                    <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Админка</a>
+                                        </li>
                 </ul>
             </div>
         </div>
