СДЕЛАЛ ЗАКАЗЫ УРА

--- a/WebApplication2/Views/Home/Delete.cshtml
+++ b/WebApplication2/Views/Home/Delete.cshtml
@@ -8,7 +8,7 @@
               </div>
     <div class="mb-3 row">
                 <label asp-for="Author" class="form-label">Название</label>
-                <input type="text" class="form-control" asp-for="Author">
+                <input type="text" class="form-control" asp-for="Author.Name">
               </div>
     <p>
         <input type="submit" class="btn btn-primary mb-3" value="Отправить" />
