--- a/WebApplication2/Views/Home/Edit.cshtml
+++ b/WebApplication2/Views/Home/Edit.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Редактирование пользователя";
 }
-<form asp-action="edit" asp-controller="home" asp-route-id="@Model.Id">
+<form asp-action="edit" asp-controller="home" asp-route-id="@Model.ID">
     <div class="form-group">
         <label asp-for="Name" class="control-label">Имя</label>
         <input type="text" asp-for="Name" class="form-control" />
