--- a/WebApplication2/Views/Home/Create.cshtml
+++ b/WebApplication2/Views/Home/Create.cshtml
@@ -1,14 +1,24 @@
-@model WebApplication2.Models.Book;
+@model WebApplication2.Models.Book
  
 <h2>Добавление Книги</h2>
 <form asp-action="create" asp-controller="Home">
     <div class="mb-3 row">
-            <label asp-for="Name" class="form-label">Название</label>
-            <input type="text" class="form-control" asp-for="Name">
-          </div>
+        <label asp-for="Name" class="form-label">Название</label>
+        <input type="text" class="form-control" asp-for="Name">
+    </div>
     <div class="mb-3 row">
-                <label asp-for="Author" class="form-label">Автор</label>
-    <input type="text" class="form-control" asp-for="Author">
+        <label asp-for="Year_public" class="form-label">Год Публикации</label>
+        <input type="text" class="form-control" asp-for="Year_public">
+    </div>
+    
+    <div class="mb-3 row">
+        <label asp-for="Author" class="form-label">Автор</label>
+        <input type="text" class="form-control" asp-for="Author.Name">
+    </div>
+    
+    <div class="mb-3 row">
+        <label asp-for="Tag" class="form-label">Жанр</label>
+        <input type="text" class="form-control" asp-for="Tag">
     </div>
     <p>
         <input type="submit" class="btn btn-primary mb-3" value="Отправить" />
