ахахахах я чуть не умер

--- a/WebApplication2/Views/Home/Order.cshtml
+++ b/WebApplication2/Views/Home/Order.cshtml
@@ -10,7 +10,7 @@
 
 
     <div class="mb-3 row">
-        <label asp-for="Book.ID" class="form-label">Название</label>
+        <label asp-for="Book.ID" class="form-label">Артикль</label>
         <input type="text" class="form-control" asp-for="Book.ID">
     </div>
     <div class="mb-3 row">
