--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -25,8 +25,10 @@
             <div class="bg bg3"></div>
             <h3>Название: @item.Name</h3>
             <span class="price">Автор: @item.Author.Name</span>
-            <a asp-action="Delete" asp-controller="Home" asp-route-id="@item.ID" class="button">Купить</a>
-            <a asp-action="Order" asp-controller="Home" asp-route-id="@item.ID" class="button">Купить</a>
+            <a asp-action="Delete" asp-controller="Home" asp-route-id="@item.ID" class="button">Купить в один клик</a>
+            <br>
+            <a asp-action="Order" asp-controller="Home" asp-route-id="@item.ID" class="button">Заказать</a>
+            
          </div>
       </div>
       <br><br/>
