--- a/WebApplication2/Views/Home/Create.cshtml
+++ b/WebApplication2/Views/Home/Create.cshtml
@@ -117,4 +117,8 @@
               justify-content: space-between;
                 flex-wrap: wrap;
     }
+   footer{
+       position: relative;
+       margin-top: -500px;
+   }
 </style>
