--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -30,6 +30,7 @@
             <br>
             <a asp-action="Order" asp-controller="Home" asp-route-id="@item.ID" class="button">Заказать</a>
             <a asp-action="BookDetail" asp-controller="Home" asp-route-id="@item.ID" class="button">Подробнее</a>
+            <a asp-action="Reviews" asp-controller="Home" asp-route-id="@item.ID">Детали Заказа</a> 
             
             
          </div>
