--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -46,8 +46,14 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Support">Тех Поддержка</a>
                     </li>
                     <li class="nav-item">
-                                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="rss">Бета</a>
-                                        </li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="rss">Бета</a>
+                    </li>
+                    <li class="nav-item">
+                                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reviews">ddd</a>
+
+                    </li>
+                    
+                    
 
 
                 </ul>
