--- a/WebApplication2/Views/Home/BookDetail.cshtml
+++ b/WebApplication2/Views/Home/BookDetail.cshtml
@@ -1,4 +1,6 @@
+@using System.Linq;
 @model Book
+
 
 
   <main class="container my-4">
@@ -44,27 +46,31 @@
       </table>
     </div>
 
-    <div class="mb-4">
-      <h2>Reviews</h2>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Great book!</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+  <div class="mb-4">
+    <h2>Отзывы</h2>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" type="buttom" asp-action="Reviews">Бета</a>
+    if (Model.Reviews.Count > 0)
+    {
+      @foreach (var item in ViewBag.jopochka)
+      {
+        
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">@item.Name_rew</h5>
+            <p class="card-text">@item.rew</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Posted 3 days ago</small>
+          </div>
         </div>
-        <div class="card-footer">
-          <small class="text-muted">Posted 3 days ago</small>
-        </div>
-      </div>
-      <div class="card mt-3">
-        <div class="card-body">
-          <h5 class="card-title">A must-read</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Posted 1 week ago</small>
-        </div>
-      </div>
-    </div>
+      }
+    }
+    else
+    {
+      <p>пустота</p>
+    }
+  </div>
+
   </main>
 
 
