--- a/WebApplication2/Views/Home/Reviews.cshtml
+++ b/WebApplication2/Views/Home/Reviews.cshtml
@@ -1,9 +1,9 @@
-﻿@model Reviews?
+﻿@model Reviews
 <form asp-action="Reviews" asp-controller="Home">
     <div class="mb-3">
-        <input type="hidden" asp-for="BookID" value="@Model.Book.ID" />
+        <input type="text" asp-for="Book.ID"/>
         <label for="exampleFormControlInput1" asp-for="Name_rew" class="form-label">Email address</label>
-        <input type="text" class="form-control" asp-for="Name_rew" value="@User.Identity.Name" id="exampleFormControlInput1" placeholder="@User.Identity.Name">
+        <input type="text" class="form-control" asp-for="Name_rew" value="@User.Identity?.Name" id="exampleFormControlInput1" placeholder="@User.Identity.Name">
     </div>
 <div class="mb-3">
     <label for="exampleFormControlTextarea1" asp-for="rew" class="form-label">Example textarea</label>
