--- a/WebApplication2/Views/Home/BookDetail.cshtml
+++ b/WebApplication2/Views/Home/BookDetail.cshtml
@@ -48,23 +48,23 @@
 
   <div class="mb-4">
     <h2>Отзывы</h2>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" type="buttom" asp-action="Reviews">Бета</a>
- 
-
     
-      @foreach (var item in Model.Reviews)
-      {
+    <div class="d-flex flex-column my-3">
+  @foreach (var item in Model.Reviews)
+  {
+    <div class="card my-3">
+      <div class="card-body">
+        <h5 class="card-title">@item.Name_rew</h5>
+        <p class="card-text">@item.rew</p>
+      </div>
+    </div>
+  }
+</div>
+
+
+
         
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">@item.Name_rew</h5>
-            <p class="card-text">@item.rew</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Posted 3 days ago</small>
-          </div>
-        </div>
-      }
+      
   </div>
 
   </main>
