--- a/WebApplication2/Views/Home/Reviews.cshtml
+++ b/WebApplication2/Views/Home/Reviews.cshtml
@@ -1,16 +1,26 @@
 ﻿@model Reviews
 <form asp-action="Reviews" asp-controller="Home">
-    <div class="mb-3">
-        <input type="text" asp-for="Book.ID"/>
-        <label for="exampleFormControlInput1" asp-for="Name_rew" class="form-label">Email address</label>
+    <div class="mb-2">
+        <label for="exampleFormControlInput1" asp-for="Book.ID" class="form-label">Книга</label>
+        <input type="text" visibility: hidden; asp-for="Book.ID">
+    </div>
+    <div class="mb-5">
+        <label for="exampleFormControlInput1" asp-for="Name_rew" class="form-label">Имя пользователя</label>
         <input type="text" class="form-control" asp-for="Name_rew" value="@User.Identity?.Name" id="exampleFormControlInput1" placeholder="@User.Identity.Name">
     </div>
-<div class="mb-3">
-    <label for="exampleFormControlTextarea1" asp-for="rew" class="form-label">Example textarea</label>
-    <textarea class="form-control" asp-for="rew" id="exampleFormControlTextarea1" rows="3"></textarea>
-    <p>
-        <input type="submit" class="btn btn-primary mb-3" value="Отправить"/>
-    </p>
-    
-</div>
+    <div class="mb-5">
+        <label for="exampleFormControlInput1" asp-for="Stars" class="form-label">Оценка</label>
+        <input type="text" class="form-control" asp-for="Stars" id="exampleFormControlInput1" placeholder="@User.Identity.Name">
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" asp-for="rew" class="form-label">Example textarea</label>
+        <textarea class="form-control" asp-for="rew" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <div class="mb-5">
+            <p>
+                <input type="submit" class="btn btn-primary mb-3" value="Отправить"/>
+            </p>
+            <BR>
+        </div>
+    </div>
 </form>
