--- a/WebApplication2/Views/Home/BookDetail.cshtml
+++ b/WebApplication2/Views/Home/BookDetail.cshtml
@@ -16,6 +16,7 @@
         <p class="mb-3">Жанр: @Model.Tag</p>
         <p class="mb-3">Дата публикации: @Model.Year_public</p>
         <p class="mb-3">API Литресс: @Model.litres_id</p>
+        <p>Оценка пользователей: @Model.Rating</p>
         <button class="btn btn-dark mb-3">Купить сейчас</button>
         <div class="mb-3">
           <h4>Описание</h4>
@@ -56,17 +57,12 @@
       <div class="card-body">
         <h5 class="card-title">@item.Name_rew</h5>
         <p class="card-text">@item.rew</p>
+        <p>Оценка: @item.Stars</p>
       </div>
     </div>
   }
 </div>
-
-
-
-        
-      
   </div>
-
   </main>
 
 
