--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/WebApplication2.styles.css" asp-append-version="true"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-t1EtOc8+/VVhOIF24bJ7E9XNS6J/x7s+yoR6Ug7ZmFwJdtMZ7+16qLcaxIYvX9zCy8/7gF75lCfTDZTBpJWwEw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="bg"></div>
       <div class="bg bg2"></div>
       <div class="bg bg3"></div>
@@ -63,7 +64,7 @@
                         <ul class="navbar-nav flex-grow-1">
                             @if (User.Identity!.IsAuthenticated)
                             {
-                                <li class="nav-item" style="padding-top: 8px">Здравствуйте, @User.Identity.Name</li>
+                                <li class="nav-item" style="padding-top: 8px">Здравствуйте,@User.Identity.Name</li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выход</a>
                                 </li>
