Роли готовы давно, твоя прописана от и до. Мне нужен был враг вуаля, ты опреточный злодей, но в моем рукове побрей себе туз.

--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">О нас</a>
                     </li>
-                    @if (!User.IsInRole("admin"))
+                    @if (!User.IsInRole("user"))
                     {
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Админка</a>
