--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -37,14 +37,13 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">О нас</a>
                     </li>
-                    @if (!User.IsInRole("user"))
+                    @if (!User.IsInRole("user") && !User.Identity.IsAuthenticated == false)
                     {
-                        @if (!User.Identity.IsAuthenticated == false)
-                        {
+                        
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Админка</a>
                             </li>
-                        }
+                        
                     }
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OrderList">ЛистЗаказов</a>
